adding question page

--- a/assets/styling.scss
+++ b/assets/styling.scss
@@ -85,6 +85,8 @@ $M-Italic:"PublicSans-MediumItalic";
 $primary:#E6255B;
 $secondary:#272727;
 $accent:#EAA8A8;
+$success:#1C4920;
+$error:#7D1A1A;
 $forground:#373737;
 $text-white-50:#D9D9D9;
 $text-white-100:#A8A8AB;
